[package]
name = "wasm_games"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Location",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "Url",
    "UrlSearchParams"
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
